--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,13 @@
+{
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "commonjs",
+    "strict": true,
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": ["./scripts", "./test"],
+  "exclude": ["node_modules"]
+}
 
