--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
+{
+  "name": "agi-agent-v0",
+  "version": "1.0.0",
+  "description": "A minimal yet unstoppable blueprint for multi-agent AI, anchored by #PriorArt (2017).",
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.ts",
+    "upgrade": "npx hardhat run scripts/upgrade.ts"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.8.0",
+    "chai": "^4.3.6",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.4",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  }
+}
 
