--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,25 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
-    "forceConsistentCasingInFileNames": true
+    "target": "ES2020",                           /* Compile to modern JavaScript targets (ES2020) for advanced features */
+    "module": "commonjs",                         /* Use CommonJS module resolution, compatible with Node.js + Hardhat */
+    "strict": true,                               /* Enable all strict type-checking options for robust TypeScript */
+    "esModuleInterop": true,                      /* Ensures interop with CommonJS default exports (e.g., `import x from 'module'`) */
+    "forceConsistentCasingInFileNames": true,     /* Disallow differently-cased references to the same file */
+    "skipLibCheck": true,                         /* Speeds up compilation by skipping .d.ts type checking */
+    "resolveJsonModule": true,                    /* Allow importing .json files */
+    "outDir": "dist",                             /* Emit compiled JS files in this directory */
+    "rootDir": ".",                               /* The root directory of input files for the compiler */
+    "moduleResolution": "node",                   /* Use Node.js-style module resolution */
+    "allowSyntheticDefaultImports": true,         /* Support default imports from modules without default export */
+    "isolatedModules": true                       /* Ensures each file is treated as a separate module (common in TS + Hardhat) */
   },
-  "include": ["./scripts", "./test"],
-  "exclude": ["node_modules"]
+  "include": [
+    "./scripts",      /* Include all TypeScript files in the scripts folder */
+    "./test",         /* Include all TypeScript test files in the test folder */
+    "./typechain"     /* Optionally include TypeChain-generated types (if you're using TypeChain) */
+  ],
+  "exclude": [
+    "node_modules",   /* Exclude Node.js dependencies */
+    "dist"            /* Exclude compiled output directory */
+  ]
 }
-
